updated scoreboard app

--- a/MYScorekeeper/index.html
+++ b/MYScorekeeper/index.html
@@ -14,6 +14,7 @@
 <body>
 
     <div id='counter'>
+
         <div id='imgcontainer'>
             <img src="pong.jpg" id='pic' alt="" srcset="">
         </div>
@@ -23,7 +24,7 @@
         </div>
 
         <div id='controls'>
-            <select id='scoreSelect'>
+            <select id='scoreSelect' class='btn'>
                 <option value="3">3</option>
                 <option value="5">5</option>
                 <option value="7">7</option>
@@ -34,7 +35,7 @@
             </select>
             <button id="p1button" class="btn">+1 Player One</button>
             <button id="p2button" class="btn">+1 Player Two</button>
-            <button id="resetButton">Reset</button>
+            <button id="resetButton" class='btn'>Reset</button>
         </div>
     </div>
     <script src="app.js"></script>
