--- a/Scorekeeper/index.html
+++ b/Scorekeeper/index.html
@@ -23,7 +23,7 @@
             <h1><span id="p1score">0</span> to <span id="p2score">0</span></h1>
         </div>
 
-        <div id='controls'>
+        <div id='select'>
             <select id='scoreSelect' class='btn'>
                 <option value="3">3</option>
                 <option value="5">5</option>
@@ -33,9 +33,15 @@
                 <option value="13">13</option>
 
             </select>
-            <button id="p1button" class="btn">+1 Player One</button>
-            <button id="p2button" class="btn">+1 Player Two</button>
-            <button id="resetButton" class='btn'>Reset</button>
+        </div>
+
+        <div id='controls'>
+
+            <div class='button'>
+                <button id="p1button" class="btn">+1 Player One</button>
+                <button id="p2button" class="btn">+1 Player Two</button>
+                <button id="resetButton" class='btn'>Reset</button>
+            </div>
         </div>
     </div>
     <script src="app.js"></script>
